elk on baremetal