@@ -833,3 +833,491 @@ tcp6       0      0 :::5432                 :::*                    LISTEN      
 
 sed -i 's/#cluster.name: my-application/cluster.name: elk-playground/' /etc/elasticsearch/elasticsearch.yml
 sed -i 's/#node.name: node-1/node.name: node-1/' /etc/elasticsearch/elasticsearch.yml
+
+---
+
+
+[root@elk bin]# /usr/share/logstash/jdk/bin/java --version
+openjdk 11.0.24 2024-07-16
+OpenJDK Runtime Environment Temurin-11.0.24+8 (build 11.0.24+8)
+OpenJDK 64-Bit Server VM Temurin-11.0.24+8 (build 11.0.24+8, mixed mode)
+[root@elk bin]# /usr/share/elasticsearch/jdk/bin/java --version
+openjdk 22.0.2 2024-07-16
+OpenJDK Runtime Environment (build 22.0.2+9-70)
+OpenJDK 64-Bit Server VM (build 22.0.2+9-70, mixed mode, sharing)
+
+---
+
+[Download | pgJDBC](https://jdbc.postgresql.org/download/)
+wget https://jdbc.postgresql.org/download/postgresql-42.7.4.jar
+
+
+---
+
+/usr/share/logstash/logstash-core/lib/jars/postgresql-42.7.4.jar
+org.postgresql.Driver
+
+input {
+  jdbc {
+    jdbc_driver_library => "mysql-connector-java-5.1.36-bin.jar"
+    jdbc_driver_class => "com.mysql.jdbc.Driver"
+    jdbc_connection_string => "jdbc:postgresql://localhost:5432/postgres"
+    jdbc_user => "mysql"
+    schedule => "* * * * *"
+    statement => "SELECT * from songs where artist = :favorite_artist"
+  }
+}
+
+
+input {
+  jdbc {
+    jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/postgresql-42.7.4.jar"
+    jdbc_driver_class => "org.postgresql.Driver"
+    jdbc_connection_string => "jdbc:postgresql://localhost:5432/postgres"
+    jdbc_user => "postgresql"
+    jdbc_password => "postgresql"
+    schedule => "*/1 * * * *"
+    statement => "SELECT * from pg_am;"
+  }
+}
+
+filter {
+
+}
+
+output {
+    stdout {
+        codec => rubydebug
+    }
+}
+
+
+
+```
+postgres=# \l
+                                  List of databases
+   Name    |  Owner   | Encoding |   Collate   |    Ctype    |   Access privileges   
+-----------+----------+----------+-------------+-------------+-----------------------
+ postgres  | postgres | UTF8     | en_US.UTF-8 | en_US.UTF-8 | 
+ template0 | postgres | UTF8     | en_US.UTF-8 | en_US.UTF-8 | =c/postgres          +
+           |          |          |             |             | postgres=CTc/postgres
+ template1 | postgres | UTF8     | en_US.UTF-8 | en_US.UTF-8 | =c/postgres          +
+           |          |          |             |             | postgres=CTc/postgres
+(3 rows)
+
+postgres=# \dt
+Did not find any relations.
+postgres=# \dS
+                        List of relations
+   Schema   |              Name               | Type  |  Owner   
+------------+---------------------------------+-------+----------
+ pg_catalog | pg_aggregate                    | table | postgres
+ pg_catalog | pg_am                           | table | postgres
+postgres=# select count(1) from pg_am;
+ count 
+-------
+     7
+(1 row)
+
+postgres=# select * from pg_am;
+ oid  | amname |      amhandler       | amtype 
+------+--------+----------------------+--------
+    2 | heap   | heap_tableam_handler | t
+  403 | btree  | bthandler            | i
+  405 | hash   | hashhandler          | i
+  783 | gist   | gisthandler          | i
+ 2742 | gin    | ginhandler           | i
+ 4000 | spgist | spghandler           | i
+ 3580 | brin   | brinhandler          | i
+(7 rows)
+
+```
+
+
+---
+
+[root@elk logstash]# find /etc/logstash/
+/etc/logstash/
+/etc/logstash/conf.d
+/etc/logstash/jvm.options
+/etc/logstash/log4j2.properties
+/etc/logstash/logstash-sample.conf
+/etc/logstash/logstash.yml
+/etc/logstash/pipelines.yml
+/etc/logstash/startup.options
+
+
+
+[root@elk logstash]# grep -v "^#" logstash.yml 
+path.data: /var/lib/logstash
+
+
+
+path.logs: /var/log/logstash
+
+[root@elk logstash]# cat pipelines.yml 
+# This file is where you define your pipelines. You can define multiple.
+# For more information on multiple pipelines, see the documentation:
+#   https://www.elastic.co/guide/en/logstash/current/multiple-pipelines.html
+
+- pipeline.id: main
+  path.config: "/etc/logstash/conf.d/*.conf"
+
+---
+
+
+[root@elk logstash]# grep -v "^#" startup.options 
+
+
+LS_HOME=/usr/share/logstash
+
+LS_SETTINGS_DIR=/etc/logstash
+
+LS_OPTS="--path.settings ${LS_SETTINGS_DIR}"
+
+LS_JAVA_OPTS=""
+
+LS_PIDFILE=/var/run/logstash.pid
+
+LS_USER=logstash
+LS_GROUP=logstash
+
+LS_GC_LOG_FILE=/var/log/logstash/gc.log
+
+LS_OPEN_FILES=16384
+
+LS_NICE=19
+
+SERVICE_NAME="logstash"
+SERVICE_DESCRIPTION="logstash"
+
+
+
+---
+
+
+[root@elk logstash]# /usr/share/logstash/bin/logstash
+Using bundled JDK: /usr/share/logstash/jdk
+OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
+WARNING: Could not find logstash.yml which is typically located in $LS_HOME/config or /etc/logstash. You can specify the path using --path.settings. Continuing using the defaults
+Could not find log4j2 configuration at path /usr/share/logstash/config/log4j2.properties. Using default config which logs errors to the console
+[INFO ] 2024-12-31 14:27:06.587 [main] runner - Starting Logstash {"logstash.version"=>"7.17.26", "jruby.version"=>"jruby 9.2.20.1 (2.5.8) 2021-11-30 2a2962fbd1 OpenJDK 64-Bit Server VM 11.0.24+8 on 11.0.24+8 +indy +jit [linux-x86_64]"}
+[INFO ] 2024-12-31 14:27:06.591 [main] runner - JVM bootstrap flags: [-Xms1g, -Xmx1g, -XX:+UseConcMarkSweepGC, -XX:CMSInitiatingOccupancyFraction=75, -XX:+UseCMSInitiatingOccupancyOnly, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djdk.io.File.enableADS=true, -Djruby.compile.invokedynamic=true, -Djruby.jit.threshold=0, -Djruby.regexp.interruptible=true, -XX:+HeapDumpOnOutOfMemoryError, -Djava.security.egd=file:/dev/urandom, -Dlog4j2.isThreadContextMapInheritable=true]
+ERROR: Failed to read pipelines yaml file. Location: /usr/share/logstash/config/pipelines.yml
+usage:
+  bin/logstash -f CONFIG_PATH [-t] [-r] [] [-w COUNT] [-l LOG]
+  bin/logstash --modules MODULE_NAME [-M "MODULE_NAME.var.PLUGIN_TYPE.PLUGIN_NAME.VARIABLE_NAME=VALUE"] [-t] [-w COUNT] [-l LOG]
+  bin/logstash -e CONFIG_STR [-t] [--log.level fatal|error|warn|info|debug|trace] [-w COUNT] [-l LOG]
+  bin/logstash -i SHELL [--log.level fatal|error|warn|info|debug|trace]
+  bin/logstash -V [--log.level fatal|error|warn|info|debug|trace]
+  bin/logstash --help
+[FATAL] 2024-12-31 14:27:06.895 [LogStash::Runner] Logstash - Logstash stopped processing because of an error: (SystemExit) exit
+org.jruby.exceptions.SystemExit: (SystemExit) exit
+	at org.jruby.RubyKernel.exit(org/jruby/RubyKernel.java:747) ~[jruby-complete-9.2.20.1.jar:?]
+	at org.jruby.RubyKernel.exit(org/jruby/RubyKernel.java:710) ~[jruby-complete-9.2.20.1.jar:?]
+	at usr.share.logstash.lib.bootstrap.environment.<main>(/usr/share/logstash/lib/bootstrap/environment.rb:94) ~[?:?]
+
+---
+
+[root@elk bin]# ./logstash --help
+Using bundled JDK: /usr/share/logstash/jdk
+OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
+
+WARNING: Could not find logstash.yml which is typically located in $LS_HOME/config or /etc/logstash. You can specify the path using --path.settings. Continuing using the defaults
+Usage:
+    bin/logstash [OPTIONS]
+
+Options:
+    -n, --node.name NAME          Specify the name of this logstash instance, if no value is given
+                                  it will default to the current hostname.
+                                   (default: "elk")
+    --enable-local-plugin-development Allow Gemfile to be manipulated directly
+                                  to facilitate simpler local plugin
+                                  development.
+                                  This is an advanced setting, intended
+                                  only for use by Logstash developers,
+                                  and should not be used in production.
+                                   (default: false)
+    -f, --path.config CONFIG_PATH Load the logstash config from a specific file
+                                  or directory.  If a directory is given, all
+                                  files in that directory will be concatenated
+                                  in lexicographical order and then parsed as a
+                                  single config file. You can also specify
+                                  wildcards (globs) and any matched files will
+                                  be loaded in the order described above.
+    -e, --config.string CONFIG_STRING Use the given string as the configuration
+                                  data. Same syntax as the config file. If no
+                                  input is specified, then the following is
+                                  used as the default input:
+                                  "input { stdin { type => stdin } }"
+                                  and if no output is specified, then the
+                                  following is used as the default output:
+                                  "output { stdout { codec => rubydebug } }"
+                                  If you wish to use both defaults, please use
+                                  the empty string for the '-e' flag.
+                                   (default: nil)
+    --field-reference-parser MODE (DEPRECATED) This option is no longer
+                                  configurable.
+                                  
+                                  Use the given MODE when parsing field
+                                  references.
+                                  
+                                  The field reference parser is used to expand
+                                  field references in your pipeline configs,
+                                  and has become more strict to better handle
+                                  ambiguous- and illegal-syntax inputs.
+                                  
+                                  The only available MODE is:
+                                   - `STRICT`: parse in a strict manner; when
+                                     given ambiguous- or illegal-syntax input,
+                                     raises a runtime exception that should
+                                     be handled by the calling plugin.
+                                  
+                                   (default: "STRICT")
+    --modules MODULES             Load Logstash modules.
+                                  Modules can be defined using multiple instances
+                                  '--modules module1 --modules module2',
+                                     or comma-separated syntax
+                                  '--modules=module1,module2'
+                                  Cannot be used in conjunction with '-e' or '-f'
+                                  Use of '--modules' will override modules declared
+                                  in the 'logstash.yml' file.
+    -M, --modules.variable MODULES_VARIABLE Load variables for module template.
+                                  Multiple instances of '-M' or
+                                  '--modules.variable' are supported.
+                                  Ignored if '--modules' flag is not used.
+                                  Should be in the format of
+                                  '-M "MODULE_NAME.var.PLUGIN_TYPE.PLUGIN_NAME.VARIABLE_NAME=VALUE"'
+                                  as in
+                                  '-M "example.var.filter.mutate.fieldname=fieldvalue"'
+    --setup                       Load index template into Elasticsearch, and saved searches, 
+                                  index-pattern, visualizations, and dashboards into Kibana when
+                                  running modules.
+                                   (default: false)
+    --cloud.id CLOUD_ID           Sets the elasticsearch and kibana host settings for
+                                  module connections in Elastic Cloud.
+                                  Your Elastic Cloud User interface or the Cloud support
+                                  team should provide this.
+                                  Add an optional label prefix '<label>:' to help you
+                                  identify multiple cloud.ids.
+                                  e.g. 'staging:dXMtZWFzdC0xLmF3cy5mb3VuZC5pbyRub3RhcmVhbCRpZGVudGlmaWVy'
+    --cloud.auth CLOUD_AUTH       Sets the elasticsearch and kibana username and password
+                                  for module connections in Elastic Cloud
+                                  e.g. 'username:<password>'
+    --pipeline.id ID              Sets the ID of the pipeline.
+                                   (default: "main")
+    -w, --pipeline.workers COUNT  Sets the number of pipeline workers to run.
+                                   (default: 2)
+    --pipeline.ordered ORDERED    Preserve events order. Possible values are `auto` (default), `true` and `false`.
+                                  This setting
+                                  will only work when also using a single worker for the pipeline.
+                                  Note that when enabled, it may impact the performance of the filters
+                                  and ouput processing.
+                                  The `auto` option will automatically enable ordering if the
+                                  `pipeline.workers` setting is set to `1`.
+                                  Use `true` to enable ordering on the pipeline and prevent logstash
+                                  from starting if there are multiple workers.
+                                  Use `false` to disable any extra processing necessary for preserving
+                                  ordering.
+                                   (default: "auto")
+    --java-execution              Use Java execution engine.
+                                   (default: true)
+    --plugin-classloaders         (Beta) Load Java plugins in independent classloaders to isolate their dependencies.
+                                   (default: false)
+    -b, --pipeline.batch.size SIZE Size of batches the pipeline is to work in.
+                                   (default: 125)
+    -u, --pipeline.batch.delay DELAY_IN_MS When creating pipeline batches, how long to wait while polling
+                                  for the next event.
+                                   (default: 50)
+    --pipeline.unsafe_shutdown    Force logstash to exit during shutdown even
+                                  if there are still inflight events in memory.
+                                  By default, logstash will refuse to quit until all
+                                  received events have been pushed to the outputs.
+                                   (default: false)
+    --pipeline.ecs_compatibility STRING Sets the pipeline's default value for `ecs_compatibility`,
+                                  a setting that is available to plugins that implement
+                                  an ECS Compatibility mode for use with the Elastic Common
+                                  Schema.
+                                  Possible values are:
+                                   - disabled (default)
+                                   - v1
+                                   - v2
+                                  This option allows the early opt-in (or preemptive opt-out)
+                                  of ECS Compatibility modes in plugins, which is scheduled to
+                                  be on-by-default in a future major release of Logstash.
+                                  
+                                  Values other than `disabled` are currently considered BETA,
+                                  and may produce unintended consequences when upgrading Logstash.
+                                   (default: "disabled")
+    --path.data PATH              This should point to a writable directory. Logstash
+                                  will use this directory whenever it needs to store
+                                  data. Plugins will also have access to this path.
+                                   (default: "/usr/share/logstash/data")
+    -p, --path.plugins PATH       A path of where to find plugins. This flag
+                                  can be given multiple times to include
+                                  multiple paths. Plugins are expected to be
+                                  in a specific directory hierarchy:
+                                  'PATH/logstash/TYPE/NAME.rb' where TYPE is
+                                  'inputs' 'filters', 'outputs' or 'codecs'
+                                  and NAME is the name of the plugin.
+                                   (default: [])
+    -l, --path.logs PATH          Write logstash internal logs to the given
+                                  file. Without this flag, logstash will emit
+                                  logs to standard output.
+                                   (default: "/usr/share/logstash/logs")
+    --log.level LEVEL             Set the log level for logstash. Possible values are:
+                                    - fatal
+                                    - error
+                                    - warn
+                                    - info
+                                    - debug
+                                    - trace
+                                   (default: "info")
+    --config.debug                Print the compiled config ruby code out as a debug log (you must also have --log.level=debug enabled).
+                                  WARNING: This will include any 'password' options passed to plugin configs as plaintext, and may result
+                                  in plaintext passwords appearing in your logs!
+                                   (default: false)
+    -i, --interactive SHELL       Drop to shell instead of running as normal.
+                                  Valid shells are "irb" and "pry"
+    -V, --version                 Emit the version of logstash and its friends,
+                                  then exit.
+    -t, --config.test_and_exit    Check configuration for valid syntax and then exit.
+                                   (default: false)
+    -r, --config.reload.automatic Monitor configuration changes and reload
+                                  whenever it is changed.
+                                  NOTE: use SIGHUP to manually reload the config
+                                   (default: false)
+    --config.reload.interval RELOAD_INTERVAL How frequently to poll the configuration location
+                                  for changes, in seconds.
+                                   (default: #<Java::OrgLogstashUtil::TimeValue:0x24ecc9fc>)
+    --api.enabled ENABLED         Can be used to disable the Web API, which is
+                                  enabled by default.
+                                   (default: true)
+    --api.http.host HTTP_HOST     Web API binding host (default: "127.0.0.1")
+    --api.http.port HTTP_PORT     Web API http port (default: 9600..9700)
+    --log.format FORMAT           Specify if Logstash should write its own logs in JSON form (one
+                                  event per line) or in plain text (using Ruby's Object#inspect)
+                                   (default: "plain")
+    --path.settings SETTINGS_DIR  Directory containing logstash.yml file. This can also be
+                                  set through the LS_SETTINGS_DIR environment variable.
+                                   (default: "/usr/share/logstash/config")
+    --verbose                     Set the log level to info.
+                                  DEPRECATED: use --log.level=info instead.
+    --debug                       Set the log level to debug.
+                                  DEPRECATED: use --log.level=debug instead.
+    --quiet                       Set the log level to info.
+                                  DEPRECATED: use --log.level=info instead.
+    --http.enabled                Can be used to disable the Web API, which is
+                                  enabled by default.
+                                  DEPRECATED: use `--api.enabled=false`
+    --http.host HTTP_HOST         Web API binding host
+                                  DEPRECATED: use `--api.http.host=IP`
+    --http.port HTTP_PORT         Web API http port
+                                  DEPRECATED: use `--api.http.port=PORT`
+    -h, --help                    print help
+
+---
+
+
+```log
+[2024-12-31T14:47:01,353][INFO ][logstash.inputs.jdbc     ][healthcheck][c216f07b66a38fcb329cf7dfe888c4af778a8ac01ca183f70b31ef376c9a2873] (0.010406s) SELECT * from pg_am;
+[2024-12-31T14:47:01,395][WARN ][logstash.inputs.jdbc     ][healthcheck][c216f07b66a38fcb329cf7dfe888c4af778a8ac01ca183f70b31ef376c9a2873] Exception when executing JDBC query {:exception=>Sequel::DatabaseError, :message=>"Java::OrgLogstash::MissingConverterException: Missing Converter handling for full class name=org.postgresql.util.PGobject, simple name=PGobject", :cause=>"org.logstash.MissingConverterException: Missing Converter handling for full class name=org.postgresql.util.PGobject, simple name=PGobject"}
+```
+
+---
+
+
+postgres=# \d employees
+                                           Table "public.employees"
+   Column    |          Type          | Collation | Nullable |                    Default     
+                
+-------------+------------------------+-----------+----------+--------------------------------
+----------------
+ employee_id | integer                |           | not null | nextval('employees_employee_id_
+seq'::regclass)
+ first_name  | character varying(50)  |           | not null | 
+ last_name   | character varying(50)  |           | not null | 
+ email       | character varying(100) |           |          | 
+ hire_date   | date                   |           | not null | 
+ salary      | numeric(10,2)          |           |          | 
+Indexes:
+    "employees_pkey" PRIMARY KEY, btree (employee_id)
+    "employees_email_key" UNIQUE CONSTRAINT, btree (email)
+
+
+
+postgres=# \dt
+           List of relations
+ Schema |   Name    | Type  |  Owner   
+--------+-----------+-------+----------
+ public | employees | table | postgres
+(1 row)
+
+postgres=# select * from employees;
+ employee_id | first_name | last_name | email | hire_date | salary 
+-------------+------------+-----------+-------+-----------+--------
+(0 rows)
+
+postgres=# insert into employees(first_name, last_name, hire_date) values('health', 'test', now());
+INSERT 0 1
+postgres=# select * from employees;
+ employee_id | first_name | last_name | email | hire_date  | salary 
+-------------+------------+-----------+-------+------------+--------
+           1 | health     | test      |       | 2024-12-31 |       
+(1 row)
+
+
+
+
+CREATE TABLE health (
+    id SERIAL PRIMARY KEY,
+    first VARCHAR(50),
+    second VARCHAR(50)
+);
+
+INSERT INTO health(first, second) VALUES('health', 'test');
+
+---
+
+
+content_base/infra/elk on  main [!?] via ⍱ v2.4.3 ❯ curl -X GET localhost:19200/health/_count{"count":1,"_shards":{"total":1,"successful":1,"skipped":0,"failed":0}}content_base/infra/elk on  main [!?] via ⍱ v2.4.3 ❯ 
+content_base/infra/elk on  main [!?] via ⍱ v2.4.3 ❯ curl -X GET localhost:19200/health/_search
+{"took":1,"timed_out":false,"_shards":{"total":1,"successful":1,"skipped":0,"failed":0},"hits":{"total":{"value":1,"relation":"eq"},"max_score":1.0,"hits":[{"_index":"health","_type":"_doc","_id":"1","_score":1.0,"_source":{"second":"test","@version":"1","@timestamp":"2024-12-31T15:49:01.082Z","id":1,"first":"health"}}]}}content_base/infra/elk on  main [!?] via ⍱ v2.4.3 ❯ h?prettyGET localhost:19200/health/_search
+{
+  "took" : 1,
+  "timed_out" : false,
+  "_shards" : {
+    "total" : 1,
+    "successful" : 1,
+    "skipped" : 0,
+    "failed" : 0
+  },
+  "hits" : {
+    "total" : {
+      "value" : 1,
+      "relation" : "eq"
+    },
+    "max_score" : 1.0,
+    "hits" : [
+      {
+        "_index" : "health",
+        "_type" : "_doc",
+        "_id" : "1",
+        "_score" : 1.0,
+        "_source" : {
+          "second" : "test",
+          "@version" : "1",
+          "@timestamp" : "2024-12-31T15:50:00.721Z",
+          "id" : 1,
+          "first" : "health"
+        }
+      }
+    ]
+  }
+}
+
+---
+
+elasticsearch를 out of box(host)에서 접근할 수 있게 하려면 초기 설치후 첫 기동에서는 불가능하다(이유는 파악 안됨)
+다만, 첫 기동 후 /etc/elasticsearch/elasticsearch.yml을 원하는 방식대로 바꾸면 그때는 제대로 동작한다.
+이거 알아내는데 엄청난 시간이 걸렸다.(restarting이 있는 이유)
